@@ -1,18 +1,15 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
+//JAVA 22+
+//JAVA_OPTIONS --enable-native-access=ALL-UNNAMED
 //DEPS it.uhde:periph-transport:1.0-SNAPSHOT
 //DEPS it.uhde:periph-java:1.0-SNAPSHOT
-//DEPS com.pi4j:pi4j-core:2.7.0
-//DEPS com.pi4j:pi4j-plugin-raspberrypi:2.7.0
-//DEPS com.pi4j:pi4j-plugin-linuxfs:2.7.0
 
-import com.pi4j.Pi4J;
 import it.uhde.periph.transport.I2CTransport;
 import it.uhde.periph.chips.power.Ina226Full;
 
 public class Complete {
     public static void main(String[] args) throws Exception {
-        var pi4j = Pi4J.newAutoContext();                                   // initialise Pi4J, () → Context
-        try (var transport = new I2CTransport(pi4j, 1, 0x40)) {            // open I²C bus 1, device 0x40, (bus, address) → I2CTransport
+        try (var transport = new I2CTransport(1, 0x40)) {            // open I²C bus 1, device 0x40, (bus, address) → I2CTransport
 
             var ina = new Ina226Full(transport, 0.1, 2.0);                 // construct driver, (transport, rShunt=0.1 Ω, maxCurrent=2.0 A) → Ina226Full
 
@@ -62,8 +59,6 @@ public class Complete {
             ina.reset();                                                    // reset chip and re-write calibration, () → void
                                                                             // sets RST bit; chip returns to 0x4127; calibration re-written
 
-        } finally {
-            pi4j.shutdown();
         }
     }
 }
