@@ -1,11 +1,9 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
+//JAVA 22+
+//JAVA_OPTIONS --enable-native-access=ALL-UNNAMED
 //DEPS it.uhde:periph-transport:1.0-SNAPSHOT
 //DEPS it.uhde:periph-java:1.0-SNAPSHOT
-//DEPS com.pi4j:pi4j-core:2.7.0
-//DEPS com.pi4j:pi4j-plugin-raspberrypi:2.7.0
-//DEPS com.pi4j:pi4j-plugin-linuxfs:2.7.0
 
-import com.pi4j.Pi4J;
 import it.uhde.periph.transport.I2CTransport;
 import it.uhde.periph.chips.power.Ina226Full;
 
@@ -24,8 +22,7 @@ public class Demo {
     private static final double ALERT_POWER  = 1.0;  // W
 
     public static void main(String[] args) throws Exception {
-        var pi4j = Pi4J.newAutoContext();                                   // initialise Pi4J, () → Context
-        try (var transport = new I2CTransport(pi4j, 1, 0x40)) {            // open I²C bus 1, device 0x40, (bus, address) → I2CTransport
+        try (var transport = new I2CTransport(1, 0x40)) {            // open I²C bus 1, device 0x40, (bus, address) → I2CTransport
             var ina = new Ina226Full(transport, 0.1, 2.0);                 // construct driver, (transport, rShunt=0.1 Ω, maxCurrent=2.0 A) → Ina226Full
 
             // --- Configure for noise-sensitive power rail monitoring ---
@@ -77,8 +74,6 @@ public class Demo {
             System.out.printf("Power        — min=%.4f W  max=%.4f W  mean=%.4f W%n",
                     minP, maxP, sumP / SAMPLES);
 
-        } finally {
-            pi4j.shutdown();
         }
     }
 }
